[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Mitra",email = "mitbarve13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-multipart (>=0.0.20,<0.0.21)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
